Refactors, first tests implemented for the lib